# chuk-mcp-celestial

./: .dockerignore  .env  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  README.md  ROADMAP.md  SPEC.md  fly.toml  pyproject.toml
.github/workflows/: publish.yml  release.yml  test.yml
examples/: 05_planet_position.py  06_planet_events.py  07_artifact_storage.py  README.md  eclipse_planner.py  example_basic.py
src/chuk_mcp_celestial/: __init__.py  config.py  constants.py  models.py  server.py
src/chuk_mcp_celestial/core/: __init__.py  celestial_storage.py
src/chuk_mcp_celestial/providers/: base.py  factory.py  navy.py  skyfield_provider.py
tests/: __init__.py  conftest.py  test_base.py  test_celestial_storage.py  test_config.py  test_factory.py  test_navy_provider.py  test_planet_events.py  test_planet_position.py  test_server.py  test_sky.py  test_skyfield_unit.py  test_skyfield_vfs.py
